[gd_scene load_steps=2 format=3 uid="uid://crc7cokhvw5sx"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_ild75"]

[node name="Main_Menu" type="Node2D"]
script = ExtResource("1_ild75")

[node name="Play_Button" type="Button" parent="."]
offset_left = 385.0
offset_top = 101.0
offset_right = 778.0
offset_bottom = 156.0
text = "Play"

[node name="Settings_Button" type="Button" parent="."]
offset_left = 385.0
offset_top = 215.0
offset_right = 778.0
offset_bottom = 270.0
text = "Settings"

[node name="Quit_Button" type="Button" parent="."]
offset_left = 385.0
offset_top = 499.0
offset_right = 778.0
offset_bottom = 554.0
text = "Quit"

[connection signal="button_down" from="Play_Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Settings_Button" to="." method="_on_button_2_button_down"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_quit_button_pressed"]
